# beamformer-cpp

./: .clangd  .gitignore  CMakeLists.txt  README.md
data/: info_sim.wav.txt
scripts/: simulate.py
src/: main.cpp
